# This toml generates rust dependencies, run `cargo raze` in this directory
# need to `cargo install cargo-raze` first
# if that fails make sure to have openssl installed:
# `sudo apt-get install pkg-config libssl-dev`
[package]
name = "intcoder"
version = "0.1.0"
authors = ["joseph <jefeatherston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"

[raze.crates.proc-macro2.'1.0.8']
additional_flags = [
    "--cfg=use_proc_macro",
]