# this was just for running rust without bazel
[package]
name = "intcoderpreter"
version = "0.1.0"
authors = ["joseph <jefeatherston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day2"
path = "/src/day2.rs"

[dependencies]
