# this was just for running rust without bazel
[package]
name = "intcodewrapper"
version = "0.1.0"
authors = ["joseph <jefeatherston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "intcodewrapper"
path = "/src/lib.rs"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]